# riscv_emulator

./: .gitignore  Makefile  README.md  all_builds.nix  compile_flags.txt  conanfile.txt  default.nix  meson.build  shell.nix
inc/: alu.hpp  bus.hpp  config_db.hpp  configurator.hpp  core.hpp  csr.hpp  data_mem.hpp  decoder.hpp  exception.hpp  factory.hpp  instr_mem.hpp  isa_extension.hpp  lsu.hpp  memory.hpp  rf.hpp  riscv_algos.hpp
nix/: sources.json
src/: alu.cpp  alu.hpp  core.cpp  core.hpp  csr.cpp  csr.hpp  decoder.cpp  decoder.hpp  exception.hpp  memory.cpp  riscv.hpp
tests/: test_alu.cpp  test_core.cpp  test_decoder.cpp  test_memory.cpp  test_rf.cpp
